Fixed warning box cut off and influence on metric width

--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -14,5 +14,8 @@
 
   &__button {
     margin-top: 2rem;
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
   }
 }
