--- a/src/app/pages/presenterview/presenterview.component.scss
+++ b/src/app/pages/presenterview/presenterview.component.scss
@@ -28,6 +28,10 @@
   // margin-bottom: 18%;
 }
 
+.parent {
+  text-align: center;
+}
+
 .warnings{
   // height: 100px;
   //margin-left:300px;
@@ -37,15 +41,21 @@
   border-radius: 30px;
   color: white;
   //display: flex;
-  display: inline;
-  display: -webkit-flex;
+  display: inline-block;
+  //display: -webkit-flex;
   font-size: 2rem;
   vertical-align: middle;
   border-style: solid;
   border-width: 4px;
+
+  //display: flex;
+  //justify-content: center;
+  //align-items: center;
 }
 
 .text-warning{
   text-align: center;
-  margin: auto;
+  margin-right: 1rem;
+  margin-left: 1rem;
+  //margin: auto;
 }
